--- a/index.html
+++ b/index.html
@@ -27,8 +27,18 @@
                             <p id="hero-min-temp"></p>
                         </div>
                     </div>
+                    <button class="weather__add">Add City</button>
                 </div>
             </section>
+            <section class="weather-list">
+                <div class="container">
+                    <div class="weather-list__wrapper"></div>
+                </div>
+            </section>
+
+            <div class="container">
+                <!-- <button class="debug-ls">Clear ls</button> -->
+            </div>
         </main>
         <script src="js/index.js"></script>
     </body>
