--- a/index.html
+++ b/index.html
@@ -33,12 +33,9 @@
             <section class="weather-list">
                 <div class="container">
                     <div class="weather-list__wrapper"></div>
+                    <button class="weather-list__clear">Clear List</button>
                 </div>
             </section>
-
-            <div class="container">
-                <!-- <button class="debug-ls">Clear ls</button> -->
-            </div>
         </main>
         <script src="js/index.js"></script>
     </body>
