--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
                             <p id="hero-min-temp"></p>
                         </div>
                     </div>
-                    <button class="weather__add">Add City</button>
+                    <div class="weather__buttons">
+                        <button class="weather__add">Add City</button>
+                        <button class="weather__list-clear">Clear All</button>
+                    </div>
                 </div>
             </section>
             <section class="weather-list">
                 <div class="container">
                     <div class="weather-list__wrapper"></div>
-                    <button class="weather-list__clear">Clear List</button>
                 </div>
             </section>
         </main>
